i change achievement to achievementt , and then i create some related files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'New Achievement', new_achievement_path %></li>
+        <li><%= link_to 'New Achievement', new_achievementt_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
